# awsenc

./: CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md  SECURITY.md  THREAT_MODEL.md
.github/workflows/: ci.yml  release.yml
Formula/: awsenc.rb
awsenc-cli/: Cargo.toml  build.rs
awsenc-cli/src/: auth.rs  cli.rs  exec.rs  install.rs  main.rs  picker.rs  serve.rs  shell_init.rs  usage.rs
awsenc-cli/tests/: integration_tests.rs
awsenc-core/: Cargo.toml
awsenc-core/src/: cache.rs  config.rs  credential.rs  lib.rs  mfa.rs  okta.rs  profile.rs  sts.rs
awsenc-core/tests/: cache_disk_tests.rs  http_mock_tests.rs
awsenc-secure-storage/: Cargo.toml
awsenc-secure-storage/src/: lib.rs  linux.rs  macos.rs  mock.rs  windows.rs  wsl.rs
awsenc-tpm-bridge/: Cargo.toml  build.rs
awsenc-tpm-bridge/src/: main.rs  tpm.rs
installer/: awsenc.wxs
winget/: GoDaddy.awsenc.installer.yaml  GoDaddy.awsenc.locale.en-US.yaml  GoDaddy.awsenc.yaml  JGowdy.awsenc.installer.yaml  JGowdy.awsenc.locale.en-US.yaml  JGowdy.awsenc.yaml
