[package]
name = "awsenc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "awsenc"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
awsenc-core = { path = "../awsenc-core" }
enclaveapp-core = { workspace = true }
enclaveapp-app-storage = { workspace = true }
enclaveapp-wsl = { workspace = true }
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = { version = "1", features = ["derive"] }
rpassword = "7"
regex = "1"
fs4 = "0.9"

[build-dependencies]
enclaveapp-build-support = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
toml = "0.8"
enclaveapp-app-storage = { workspace = true, features = ["mock"] }
