[package]
name = "awsenc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
enclaveapp-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
dirs = "5"
thiserror = "1"
tracing = "0.1"
zeroize = { version = "1", features = ["derive"] }
url = "2"
tokio = { version = "1", features = ["time", "macros"] }
roxmltree = "0.20"
scraper = "0.24"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
