[package]
name = "awsenc-secure-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
mock = ["aes-gcm", "rand"]

[dependencies]
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
tracing = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
aes-gcm = { version = "0.10" }
rand = { version = "0.8" }
keyring = { version = "2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
security-framework-sys = "2"
core-foundation = "0.9"
core-foundation-sys = "0.8"

[dev-dependencies]
tempfile = "3"
