[package]
name = "awsenc-tpm-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "awsenc-tpm-bridge"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"
